API updates and terms.json file
